--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Desenvolvimento Web 1</h1>
-    <a href="">Atividade 1</a>
-    <a href="">Atividade 2</a>
-    <a href="/atividades/A3/index.html">Atividade 3</a>
+    <ul>
+       <li> <a href="">Atividade 1</a> </li>
+       <li> <a href="">Atividade 2</a> </li>
+        <li> <a href="/atividades/A3/index.html">Atividade 3</a> </li>
+    </ul>
 </body>
 </html>
