--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
        <li> <a href="">Atividade 1</a> </li>
        <li> <a href="">Atividade 2</a> </li>
-        <li> <a href="/atividades/A3/index.html">Atividade 3</a> </li>
+        <li> <a href="./atividades/A3/index.html">Atividade 3</a> </li>
     </ul>
 </body>
 </html>
