--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Desenvolvimento Web 1</h1>
     <ul>
        <li> <a href="">Atividade 1</a> </li>
-       <li> <a href="">Atividade 2</a> </li>
+       <li> <a href="./atividades/A2/index.html">Atividade 2</a> </li>
         <li> <a href="./atividades/A3/index.html">Atividade 3</a> </li>
     </ul>
 </body>
