--- a/atividades/A7/index.html
+++ b/atividades/A7/index.html
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-        <p>Gabriella Santos Mendes | Prontuário: SP3141055</p>
+        <p>Gabriella Santos Mendes | Prontuário: SP3141055   | Referência: <a href="https://www.treinaweb.com.br/blog/google-devtools-e-suas-funcionalidades" target="_blank">TreinaWeb</a></p></p>
     </footer>
 </body>
 </html>
