--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li> <a href="./atividades/A5/index.html">Atividade 5</a> </li>
         <li> <a href="./atividades/A6/index.html">Atividade 6</a> </li>
         <li> <a href="./atividades/A7/index.html">Atividade 7</a> </li>
+        <li> <a href="./atividades/Formulário/index.html">Formulário de Contato</a> </li>
         <li> <a href="./atividades/A8/index.html">Atividade 8</a> </li>
         <li> <a href="./atividades/A9/index.html">Atividade 9</a> </li>
         <li> <a href="./atividades/A10/index.html">Atividade 10</a> </li>
