--- a/atividades/A8/index.html
+++ b/atividades/A8/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Atividade 8</title>
 </head>
 <body>
-    
+    <h1>Flexbox</h1>
+    <ol>
+        <li> justify-content: flex-end;</li>
+        <li>justify-content: center;</li>
+        <li>justify-content: space-around;</li>
+        <li>justify-content: space-between;</li>
+        <li>align-items: flex-end;</li>
+        <li>justify-content: center; align-items: center;</li>
+        <li>justify-content: space-around; align-items: flex-end;</li>
+        <li>flex-direction: row-reverse;</li>
+        <li>flex-direction: column;</li>
+        <li>flex-direction: row-reverse; justify-content: flex-end;</li>
+        <li>flex-direction: column; justify-content: flex-end;</li>
+        <li>flex-direction: column-reverse; justify-content: space-between;</li>
+        <li>flex-direction: row-reverse; justify-content: center; align-items: flex-end;</li>
+        <li>order: -2;</li>
+        <li>order: -2;</li>
+        <li>order: 2; align-self: flex-end;</li>
+        <li>flex-wrap: wrap;</li>
+        <li>flex-direction: column; flex-wrap: wrap;</li>
+        <li>flex-flow: column wrap;</li>
+        <li>flex-flow: wrap column;</li>
+        <li>align-content: flex-start;</li>
+        <li>align-content: flex-end;</li>
+        <li>flex-direction: column-reverse; align-content: center;</li>
+        <li>flex-flow: column-reverse wrap-reverse; justify-content: center; align-content: space-between;</li>
+    </ol>
+
+    <h1>Grid CSS</h1>
+    <ol>
+        <li>grid-column-start: 3;</li>
+        <li>grid-column-start: 5;</li>
+        <li>grid-column-end: 4;</li>
+        <li>grid-column-end: 2;</li>
+        <li>grid-column-end: -2;</li>
+        <li>grid-column-start: -3;</li>
+        <li>grid-column-end: span 2;</li>
+        <li>grid-column-end: span 5;</li>
+        <li>grid-column-start: span 3;</li>
+        <li>grid-column: 4 / 6;</li>
+        <li>grid-column: 2 / 5;</li>
+        <li>grid-row-start: 3;</li>
+        <li>grid-row: 3 / 6;</li>
+        <li>grid-column: 2 / 3; grid-row: 5 / 6;</li>
+        <li>grid-column: 2 / 6; grid-row: 1 / 6;</li>
+        <li>grid-area: 1 / 2 / 4 / 6;</li>
+        <li>grid-area: 2 / 3 / 5 / 6;</li>
+        <li>order: 5;</li>
+        <li>order: -1;</li>
+        <li>grid-template-columns: 50% 10% 25% 5% 10%;</li>
+        <li>grid-template-columns: repeat(8, 12.5%);</li>
+        <li>grid-template-columns: 100px 3em 40%;</li>
+        <li>grid-template-columns: 1fr 5fr;</li>
+        <li>grid-template-columns: 50px 1fr 1fr 1fr 50px;</li>
+        <li>grid-template-columns: 75px 3fr 2fr;</li>
+        <li>grid-template-rows: repeat(4, 12.5px) 1fr;</li>
+    </ol>
 </body>
 </html>
